--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/massive-sdk"]
 	path = src/massive-sdk
-	url = git@github.com:OYTIS/massive-sdk-draft.git
+  url = git@github.com:twilio/Breakout_Massive_SDK.git
