Update to version 1.1.0

--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
-name=Breakout Arduino Library
-version=0.1.0
+name=Breakout Massive SDK Arduino Library
+version=1.1.0
 author=Twilio
 maintainer=Twilio <support@twilio.com>
 sentence=Arduino library for the Twilio Alfa developer board for NB-IoT.
-paragraph=Arduino library for the Twilio Alfa developer board for NB-IoT, supporting Twilio Commands.
+paragraph=Arduino library for the Twilio Alfa developer board for NB-IoT.
 category=Device Control
 url=https://www.twilio.com/wireless/
